--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,18 +32,18 @@ patch_list=PoolStringArray(  )
 [preset.1.options]
 
 texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-binary_format/64_bits=true
+texture_format/etc=true
+texture_format/etc2=true
+binary_format/64_bits=false
 custom_template/release=""
 custom_template/debug=""
-application/icon=""
-application/file_version=""
+application/icon="F:/GAME WORK/flat_word/Word.png"
+application/file_version="v1"
 application/product_version=""
-application/company_name=""
+application/company_name="Gold expiriense"
 application/product_name=""
 application/file_description=""
-application/copyright=""
+application/copyright="ГОЛДШТЕЙН"
 application/trademarks=""
 
 [preset.2]
